# bno055_code

./: CMakeLists.txt  README.md  calibration_data.txt  i2c.c  i2c.h  imu.cpp  imu.h  main.cpp
thrash/: Adafruit_BNO055.cpp  Adafruit_BNO055.h
